<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="20dp"
    android:id="@+id/layoutReports">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            >

            <TextView
                android:id="@+id/lblReportID"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/report_id"
                android:textColor="@color/dark_blue"

                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtReportID"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/_001"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"

                app:layout_constraintStart_toEndOf= "@+id/lblReportID"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/btnDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/details_link"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/lblReportUsername"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/username"
                android:textColor="@color/dark_blue"

                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblReportID" />

            <TextView
                android:id="@+id/txtReportUsername"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/username"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"

                app:layout_constraintStart_toEndOf= "@+id/lblReportUsername"
                app:layout_constraintTop_toBottomOf="@+id/lblReportID" />

            <TextView
                android:id="@+id/lblReportLocation"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/location"
                android:textColor="@color/dark_blue"

                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblReportUsername" />

            <TextView
                android:id="@+id/txtReportLocation"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/number_village_bldg_street_brgy_city"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"

                android:paddingEnd="10dp"
                android:paddingStart="10dp"

                app:layout_constraintStart_toEndOf="@+id/lblReportLocation"
                app:layout_constraintTop_toBottomOf="@+id/lblReportUsername" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>